--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  pdf: ^3.10.4
+  printing: ^5.11.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.8.3
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
